@@ -464,12 +464,49 @@ function workflow_transition_form_submit($form, &$form_state) {
 /**
  * Submit callback function for the Workflow Form / DefaultWidget.
  *
- * Validate form data.
+ * Validate form data for 'time' element.
  */
-function _workflow_transition_form_validate_time($element, &$form_state) {
+function _workflow_transition_form_element_validate_time($element, &$form_state, $form) {
   if (!strtotime($element['#value'])) {
-    form_error($element, t('The time must contain a valid value.'));
+    form_error($element, t('Please enter a valid value for time.'));
   }
+}
+
+/**
+ * Submit callback function for the Workflow Form / DefaultWidget.
+ *
+ * Move new state to proper element when using action buttons in Workflow form.
+ */
+function _workflow_transition_form_validate_buttons($form, &$form_state) {
+
+  // Move the State ID of the clicked button to the proper form element.
+  $form_state['input']['workflow_sid'] = $form_state['triggering_element']['#workflow_sid'];
+/*
+  // Make sure the action is executed, influencing function core/includes/form.inc/form_execute_handlers().
+  // In the workflow form, we were not aware yet of the submit buttons
+  // of the complete form. We try to correct this here,
+  // without adding an hook_form_alter.
+  if (count($form_state['triggering_element']['#submit'])) {
+    // We are on a View page or History tab.
+    // Nothing to do: the correct submit button is already added.
+  }
+  elseif (!empty($form_state['buttons'][0]['#submit'])) {
+    // We are on a Node form/Edit page. Try to fix the form_state.
+    // Attempt 1: Add the default submit handler: Success: no
+    if (!in_array(reset($form_state['buttons'][0]['#submit']), $form_state['submit_handlers'])) {
+      $form_state['submit_handlers'] += $form_state['buttons'][0]['#submit'];
+    }
+    // Attempt 2: Set the First button as clicked button: Success: no
+    $form_state['triggering_element'] = $form_state['buttons'][0];
+    $form_state['clicked_button'] = $form_state['buttons'][0];
+  }
+  else {
+    // We are on a Comment form. Somehow, the Save button does not have a
+    // submit callback (the Preview button has).
+    // Don't know how to handle this. Should not be used, since this is a 'edit' page, too.
+    // $form_state['triggering_element']['#submit'] += $form_state['buttons'][0]['#submit'];
+  }
+ */
 }
 
 /**
